cmake_minimum_required(VERSION 2.8.4)
project(leetcode)

add_definitions(-std=c++11)

add_executable(problem_264 src/problem_264.cpp)
add_executable(problem_3 src/problem_3.cpp)
add_executable(problem_33 src/problem_33.cpp)
add_executable(problem_201 src/problem_201.cpp)
add_executable(problem_190 src/problem_190.cpp)
